# LearnNeuralnetwork

./: CMakeLists.txt  dataset.cpp  dataset.hpp  main.cpp  model.cpp  neuralnet.cpp
